--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-native-screens": "~4.11.1",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
+    "socket.io-client": "^4.8.1",
     "undici": "^5.27.0"
   },
   "devDependencies": {
