feat(storage): add a local storage for movie list and room_id

--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
     "socket.io-client": "^4.8.1",
-    "undici": "^5.27.0"
+    "undici": "^5.27.0",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
